# CountrySearch

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  render.yaml
backend/: Cargo.toml  CountryData.xlsx
backend/src/: main.rs
frontend/: Cargo.toml
frontend/app/: globals.css  page.tsx
frontend/src/: app.rs  main.rs
public/: CountryData.xlsx
src/app/: layout.tsx  page.tsx
src/components/: country-results.tsx  country-search.tsx
src/data/: countries.json
src/lib/: country-data.ts
src/pages/api/: read-excel.ts
