[package]
name = "country-search-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
calamine = "0.23.0"
tower-http = { version = "0.5.2", features = ["fs"] }